if else if else 조건문

--- a/javascript/quiz1.html
+++ b/javascript/quiz1.html
@@ -1,8 +1,11 @@
 <script>
-  // 입력 : prompt()
-  const cm = Number(prompt("cm 단위 숫자 입력"))
-  // cm를 inch로 변경
-  const inch = cm * 0.393701
-  // 출력
-  alert(`${cm}cm는 ${inch}inch 입니다.`)
+  const a = Number(prompt('숫자 입력', ''))
+
+  if (a < 0) {
+    alert('음수')
+  } else if (a > 0) {
+    alert('양수')
+  } else {
+    alert('0')
+  }
 </script>
