--- a/javascript/quiz2.html
+++ b/javascript/quiz2.html
@@ -1,10 +1,9 @@
 <script>
-  // 숫자 입력
-  const r = Number(prompt("원의 반지름 입력"))
+  const a = Number(prompt('숫자 입력', ''))
 
-  const size = 3.14 * r * r
-  const length = 2 * 3.14 * r
-
-  // 출력
-  alert(`원의 반지름 : ${r} \n원의 넓이 : ${size}\n원의 둘레 : ${length}`)
+  if (a % 2 === 0) {
+    alert('짝수')
+  } else {
+    alert('홀수')
+  }
 </script>
