--- a/javascript/test.html
+++ b/javascript/test.html
@@ -4,9 +4,7 @@
 
   if (hours < 12) {
     alert(`현재 시간 : ${hours}, 오전`)
-  }
-  if (hours >= 12) {
+  } else {
     alert(`현재 시간 : ${hours}, 오후`)
   }
-
 </script>
