--- a/javascript/test.html
+++ b/javascript/test.html
@@ -1,17 +1,4 @@
 <script>
   const x = Number(prompt('숫자 입력'))
-  switch (x) {
-    case 1:
-      alert('입력한 값 : 1')
-      break
-    case 2:
-      alert('입력한 값 : 2')
-      break
-    case 3:
-      alert('입력한 값 : 3')
-      break
-    default:
-    alert(`입력한 값 : ${x}`)
-      break
-  }
+  alert((x >= 0) ? '0 이상의 숫자' : '0보다 작은 숫자')
 </script>
