짧은 조건문

--- a/javascript/test.html
+++ b/javascript/test.html
@@ -1,4 +1,11 @@
 <script>
-  const x = Number(prompt('숫자 입력'))
-  alert((x >= 0) ? '0 이상의 숫자' : '0보다 작은 숫자')
+  alert('start')
+  // ||
+  true || alert('|| 연산자')
+  false || alert('|| 연산자')
+
+  // &&
+  false && alert('&& 연산자')
+  true && alert('&& 연산자')
+  alert('finish')
 </script>
