--- a/javascript/test.html
+++ b/javascript/test.html
@@ -18,4 +18,28 @@
     const idx = i
     const elem = arr[i]
   }
+
+  // while 반복문
+  let i = 0
+  while (confirm('계속 진행하실?')) {
+    alert(`${i}번째 반복`)
+    i++
+  }
+
+  // break 사용 예시
+  let j = 0
+  while (j < 10) {
+    j++
+    alert(`${j}번째 반복`)
+    break
+  }
+
+  // break 사용 예시
+  let k = 0
+  while (k < 10) {
+    k++
+    alert(`${k}번째 반복`)
+    continue 
+    alert('현재 반복 끝')
+  }
 </script>
