--- a/javascript/quiz1.html
+++ b/javascript/quiz1.html
@@ -1,3 +1,13 @@
 <script>
+  let output = ''
+
+  // 중첩 반복문
+  for (let i =  0; i < 9; i++) {
+    for (let j = 0; j < 2 * i + 1; j++) {
+      output += '*'
+    }
+    output += '\n'
+  }
   
+  console.log(output)
 </script>
