--- a/javascript/quiz2.html
+++ b/javascript/quiz2.html
@@ -1,3 +1,16 @@
 <script>
+  let output = ''
+
+  // 중첩 반복문
+  for (let i = 0; i < 15; i++) {
+    for (let j = 15; j > i; j--) {
+      output += ' '
+    }
+    for (let k = 0; k < 2 * i - 1; k++) {
+      output += "*"
+    }
+    output += "\n"
+  }
   
+  console.log(output)
 </script>
