--- a/javascript/quiz3.html
+++ b/javascript/quiz3.html
@@ -1,3 +1,26 @@
 <script>
-  
+  let output = ''
+  const size = 5
+
+  for (let i = 0; i < 9; i++) {
+    for (let j = 0; j < 9 - i; j++) {
+      output += ' '
+    }
+    for (let k = 0; k < 2 * i + 1; k++) {
+      output += '*'
+    }
+    output += '\n'
+  }
+
+  for (let i = 0; i < 10; i++) {
+    for (let j = 0; j < i; j++) {
+      output += ' '
+    }
+    for (let k = 0; k < 2 * (9 - i) + 1; k++) {
+      output += '*'
+    }
+    output += '\n'
+  }
+
+  console.log(output)
 </script>
