--- a/javascript/quiz2.html
+++ b/javascript/quiz2.html
@@ -1,16 +1,18 @@
 <script>
-  let output = ''
+  // 최솟값을 구하는 함수
+  const min = function (arr) {
+    let min_num = arr[0]
+    console.log(`1st min_num : ${min_num}`)
 
-  // 중첩 반복문
-  for (let i = 0; i < 15; i++) {
-    for (let j = 15; j > i; j--) {
-      output += ' '
+    for (const value of arr) {
+      console.log(`now : ${min_num}, compare : ${value}`)
+      min_num = (value < min_num) ? value : min_num
+      console.log(`smaller : ${min_num}`)
     }
-    for (let k = 0; k < 2 * i - 1; k++) {
-      output += "*"
-    }
-    output += "\n"
+
+    console.log(`minimum nubmer : ${min_num}`)
+    return min_num
   }
-  
-  console.log(output)
+
+  console.log(min([52, 324, 31, 435, 11, 33, 64, 294]))
 </script>
