--- a/javascript/folder_1/a.html
+++ b/javascript/folder_1/a.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <script src="b.js"></script>
+  <script src="lodash.js"></script>
 </head>
 <body>
   
