--- a/javascript/folder_1/a.html
+++ b/javascript/folder_1/a.html
@@ -1,13 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
-</head>
-<body>
-  
-</body>
-</html>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
+<script>
+  const books = [{
+    name: 'book1',
+    price: 18000,
+    publisher: 'pub1'
+  }, {
+    name: 'book2',
+    price: 26000,
+    publisher: 'pub2'
+  }, {
+    name: 'book3',
+    price: 25000,
+    publisher: 'pub3'
+  }]
 
+  const output = _.sortBy(books, ['publisher', 'price'])
+  console.log(output)
+</script>
