--- a/javascript/index.html
+++ b/javascript/index.html
@@ -4,22 +4,20 @@
   <title>Document</title>
   <script>
     document.addEventListener('DOMContentLoaded', () => {
-      const header1 = document.querySelector('#textContent')
-      const header2 = document.querySelector('#innerHTML')
-
       // 조작
-      // 값 추출
-      console.log(header1.textContent)
-      console.log(header2.innerHTML)
-      // 값 할당
-      header1.textContent = '원하는<br>문자열'// <br> 미반영
-      header2.innerHTML = '원하는<br>문자열'  // <br> 반영
+      const img = document.querySelector('img')
 
+      // 값 할당 -> setAttribute(속성이름, 값)
+      // img.setAttribute('src', 'https://velog.velcdn.com/images/binest03459/post/c0a2b2f3-4537-4e7e-b0ac-115c0939b177/image.png') // 표준에 없는 경우
+      img.src = "https://velog.velcdn.com/images/binest03459/post/c0a2b2f3-4537-4e7e-b0ac-115c0939b177/image.png" // 표준에 있는 속성은 바로 활용 가능
+      
+      // 값 추출 -> getAttribute(속성이름)
+      // console.log(img.getAttribute('src')) // 표준에 없는 경우
+      console.log(img.src)  // 표준에 있는 속성은 바로 활용 가능
     })
   </script>
 </head>
 <body>
-  <h1 id="textContent">textContent 속성 문자열</h1>
-  <h1 id="innerHTML">innerHTML 속성 문자열</h1>
+  <img src="" alt="" 정보="">
 </body>
 </html>
