--- a/javascript/index.html
+++ b/javascript/index.html
@@ -2,17 +2,19 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
-</head>
-<body>
   <script>
     document.addEventListener('DOMContentLoaded', () => {
-      document.addEventListener('keydown', (event) => {
-        document.body.innerHTML = `<h1>keydown  ${event.code}</h1>`
-      })
-      document.addEventListener('keyup', () => {
-        document.body.innerHTML = '<h1>keyup</h1>'
+      const h1 = document.querySelector('h1')
+      const textarea = document.querySelector('textarea')
+
+      textarea.addEventListener('keyup', () => {
+        h1.textContent = `글자 수 : ${textarea.value.length}`
       })
     })
   </script>
+</head>
+<body>
+  <h1>글자 수 : 0</h1>
+  <textarea></textarea>
 </body>
 </html>
