--- a/javascript/index.html
+++ b/javascript/index.html
@@ -10,6 +10,12 @@
       textarea.addEventListener('keyup', () => {
         h1.textContent = `글자 수 : ${textarea.value.length}`
       })
+      textarea.addEventListener('keyup', (event) => {
+        h1.textContent = `글자 수 : ${event.currentTarget.value.length}`
+      })
+      textarea.addEventListener('keyup',function() {
+        h1.textContent = `글자 수 : ${this.value.length}`
+      })
     })
   </script>
 </head>
