--- a/javascript/index.html
+++ b/javascript/index.html
@@ -4,27 +4,23 @@
   <title>Document</title>
   <script>
     document.addEventListener('DOMContentLoaded', () => {
-      let [seconds, timerId] = [0, 0]
       const checkbox = document.querySelector('input[type=checkbox]')
       const checkboxResult = document.querySelector('h1#checkbox')
       
       checkbox.addEventListener('change', () => {
         if (checkbox.checked) {
-          timerId = setInterval(() => {
-            seconds += 1
-            checkboxResult.textContent = `${seconds}초`
-          }, 1000)
+          document.body.style.backgroundColor = 'red'
         } 
         else {
           // 체크 해제 상태
-          clearInterval(timerId)
+          document.body.style.backgroundColor = 'white'
         }
       })
     })
   </script>
 </head>
 <body>
-  <input type="checkbox" name="" id="">타이머 활성화
-  <h1 id="checkbox">0초</h1>
+  <input type="checkbox" name="" id="">
+  <h1 id="checkbox"></h1>
 </body>
 </html>
