--- a/javascript/index.html
+++ b/javascript/index.html
@@ -6,11 +6,7 @@
     const load = () => {
       const data = localStorage.getItem('application')
       if (data !== null) {
-        const [color, message] = data.split(',')
-        return {
-          color: color,
-          message: message
-        }
+        return JSON.parse(data)
       } else {
         return {
           color: 'green',
@@ -18,8 +14,9 @@
         }
       }
     }
+    
     const save = (data) => {
-      localStorage.setItem('application', `${data.color}, ${data.message}`)
+      localStorage.setItem('application', JSON.stringify(data))
     }
 
     document.addEventListener('DOMContentLoaded', () => {
