--- a/javascript/index.html
+++ b/javascript/index.html
@@ -3,7 +3,17 @@
   <meta charset="UTF-8">
   <title>Document</title>
   <script>
-    
+    // 예외 발생 상황
+    document.addEventListener('DOMContentLoaded', () => {
+      const h1 = document.querySelector('h1')
+      // console.log(h1) // null
+      // 기본 예외 처리
+      if (h1 === null) {
+        alert('오류 발생')
+      } else {
+        h1.textContent = '변경'
+      }
+    })
   </script>
 </head>
 <body>
