--- a/javascript/index.html
+++ b/javascript/index.html
@@ -1,25 +1,10 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <script>
-    function isRequired (이름) {throw `${이름} 매개변수에 문제 있다 ㅇㅋ?`}
-
-    function 메일보내기({
-      발신인 = isRequired('발신인'),
-      수신인 = isRequired('수신인'), 
-      내용 = isRequired('내용')
-    }) {
-      console.log(`발신인 : ${발신인}`)
-      console.log(`수신인 : ${수신인}`)
-      console.log(내용)
-    }
-
-    메일보내기({
-      발신인: 'kim',
-      수신인: 'lee',
-      내욕: 'hello'
-    })
     
   </script>
 </head>
