--- a/javascript/index.html
+++ b/javascript/index.html
@@ -4,11 +4,31 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <script>
-    
-  </script>
+  <script src="https://unpkg.com/react@17/umd/react.development.js"></script>
+  <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
+  <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 </head>
 <body>
-  
+  <div id="root"></div>
+  <script type="text/babel">
+    const 컨텐츠 = '마 자신있나'
+    const 속성 = 'http://placedog.net/400/200'
+    const 스타일 = {backgroundColor: 'green'}
+    const 배열 = [<li>사과</li>, <li>오렌지</li>, <li>바나나</li>]
+    const 핸들러 = (event) => { alert('클릭했냐?') }
+    // onclick -> onClick
+    // onchange -> onChange
+    // onmousedown -> onMouseDown
+
+    const 컴포넌트 = <div onClick={핸들러}>
+      <h1 style={스타일}>{컨텐츠}</h1>
+      <img src={속성} />
+      <ul>{배열}</ul>
+    </div>
+
+    const 컨테이너 = document.querySelector('#root')
+
+    ReactDOM.render(컴포넌트, 컨테이너)
+  </script>
 </body>
 </html>
