--- a/javascript/index.html
+++ b/javascript/index.html
@@ -11,20 +11,19 @@
 <body>
   <div id="root"></div>
   <script type="text/babel">
-    const 컨텐츠 = '마 자신있나'
-    const 속성 = 'http://placedog.net/400/200'
-    const 스타일 = {backgroundColor: 'green'}
-    const 배열 = [<li>사과</li>, <li>오렌지</li>, <li>바나나</li>]
-    const 핸들러 = (event) => { alert('클릭했냐?') }
-    // onclick -> onClick
-    // onchange -> onChange
-    // onmousedown -> onMouseDown
+    // 클래스 컴포넌트 만들기
+    class App extends React.Component {
+      constructor (props) { // props : properties라는 뜻(속성)
+        super(props)  // this.props = props
+        console.log(props)
+      }
 
-    const 컴포넌트 = <div onClick={핸들러}>
-      <h1 style={스타일}>{컨텐츠}</h1>
-      <img src={속성} />
-      <ul>{배열}</ul>
-    </div>
+      render () {
+        return <h1>{this.props.속성A}, {this.props.속성B}</h1>
+      }
+    }
+
+    const 컴포넌트 = <App 속성A="값A" 속성B="값B" />
 
     const 컨테이너 = document.querySelector('#root')
 
