--- a/javascript/index.html
+++ b/javascript/index.html
@@ -12,18 +12,41 @@
   <div id="root"></div>
   <script type="text/babel">
     // 클래스 컴포넌트 만들기
-    class App extends React.Component {
-      constructor (props) { // props : properties라는 뜻(속성)
-        super(props)  // this.props = props
-        console.log(props)
+    class Timer extends React.Component {
+      constructor (props) { 
+        super(props) 
+        // 화면에 변화하는 값을 만들 때 this.state 객체 사용
+        this.state = {
+          현재_시간: new Date().toLocaleString()
+        }
+        // 화면에 변화하는 값을 지정하고 반영할 때 this.setState() 사용
+        setInterval(() => {
+          this.setState({
+            현재_시간: new Date().toLocaleString()
+          })
+        }, 1000)
       }
 
-      render () {
-        return <h1>{this.props.속성A}, {this.props.속성B}</h1>
+      render () { 
+        return <h1>{this.state.현재_시간}</h1> 
+      }
+
+      componentDidMount () {
+        this.timerId = setInterval(() => {
+          this.setState({ 현재_시간: new Date().toLocaleString() })
+        }, 1000)
+      }
+      componentWillUnMount () {
+        clearInterval(this.timerId)
       }
     }
 
-    const 컴포넌트 = <App 속성A="값A" 속성B="값B" />
+    class App extends React.Component {
+      constructor (props) { super(props) }
+      render () { return <Timer /> }
+    }
+
+    const 컴포넌트 = <App />
 
     const 컨테이너 = document.querySelector('#root')
 
